# lazy

./: .env.example  .gitignore  .mise.toml  CHANGELOG.md  Cargo.toml  DAEMONS.md  LICENSE-MIT  README.md  SECURITY.md  release-plz.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
examples/: README.md  tmuxp.yaml
examples/apps/axum/: .mise.toml  Cargo.toml
examples/apps/axum/src/: main.rs
examples/apps/expo/: .mise.toml  App.js  app.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
examples/apps/fastify/: .mise.toml  package-lock.json  package.json  pnpm-lock.yaml  server.js
examples/apps/spring/: .mise.toml  pom.xml
examples/apps/spring/src/main/java/dev/lazy/examples/spring/: SpringExampleApplication.java
examples/apps/spring/src/main/resources/: application.properties
examples/apps/vite/: .mise.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
examples/apps/vite/src/: main.jsx  style.css
examples/apps/webpack/: .mise.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  webpack.config.js
examples/apps/webpack/src/: index.jsx  style.css
scripts/: smoke-release.sh
src/: cli.rs  ipc.rs  listener.rs  main.rs  state.rs
src/command/: framework.rs  mod.rs  ports.rs
src/daemon/: mod.rs
src/runner/: mod.rs
tests/: process_exit.rs
