[package]
name = "lazy"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
portable-pty = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = [
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
